# immersion

./: .gitignore  README.md
data/: hsk30.json
deploy/: Caddyfile  immersion-api.service  immersion-scan.service  immersion-scan.timer  immersion-web.service  immersion-worker.service
server/: alembic.ini  pyproject.toml
server/src/app/: cli.py  config.py  db.py  derive.py  dictdata.py  main.py  models.py  worker.py
server/src/app/ai/: provider.py  tasks.py
server/src/app/anki/: connect.py  export.py  import_known.py
server/src/app/api/: anki.py  app_settings.py  events.py  jobs.py  knowledge.py  library.py  media.py  progress.py  review.py  saved.py  search.py  sentences.py  stats.py
server/src/app/ingest/: align_tracks.py  analysis.py  embedded.py  podcast.py  remux.py  scanner.py  subtitles.py  transcribe.py  video.py
server/src/app/jobs/: __init__.py  handlers.py
server/src/app/lingua/: align.py  cedict.py  convert.py  diff.py  hsk.py  pipeline.py
server/src/app/migrations/: env.py
server/src/app/migrations/versions/: 7d45e8539575_initial_schema.py  b3c9d1a4e7f2_review_state_and_fts.py  d7e2f5a1c8b4_word_extras.py  e8c1b6f4a9d3_series_name.py  f1a7c3e9b2d6_phase5.py
server/tests/: conftest.py  test_align.py  test_api.py  test_derive.py  test_diff.py  test_export.py  test_phase5.py  test_podcast.py  test_review.py  test_state_resets.py  test_subtitles.py  test_translate.py  test_video.py
server/tests/fixtures/: malformed.srt
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: hanzi-data  (+1 more)
(+48 files in other folders)
